--- a/Client/src/app/account/register/register.component.html
+++ b/Client/src/app/account/register/register.component.html
@@ -5,7 +5,7 @@
                 <div class="text-center mb-4">
                     <h3 class="mb-3 font-weight-normal">Register</h3>
                 </div>
-                <div class="form-floating mb-3 input-center">
+                <div class="form-floating mb-2 input-center">
                     <input formControlName="firstName" type="text" class="form-control"
                     placeholder="First Name" [class.is-invalid]="submitted && registerForm.get('firstName')?.errors">
                     <label for="firstName">First Name</label>
@@ -16,7 +16,7 @@
                         First name must be at least 3 and maximum 20 characters
                     </span>
                 </div>
-                <div class="form-floating mb-3 input-center">
+                <div class="form-floating mb-2 input-center">
                     <input formControlName="lastName" type="text" class="form-control" 
                     placeholder="Last Name" [class.is-invalid]="submitted && registerForm.get('lastName')?.errors">
                     <label for="lastName">Last Name</label>
@@ -27,7 +27,7 @@
                         Last name must be at least 3 and maximum 20 characters
                     </span>
                 </div>
-                <div class="form-floating mb-3 input-center">
+                <div class="form-floating mb-2 input-center">
                     <input formControlName="email" type="text" class="form-control" 
                     placeholder="Email" [class.is-invalid]="submitted && registerForm.get('email')?.errors">
                     <label for="userName">Email</label>
@@ -39,7 +39,7 @@
                     </span>
                 </div>
 
-                <div class="form-floating mb-3 input-center">
+                <div class="form-floating mb-2 input-center">
                     <input formControlName="password" type="password" class="form-control" 
                     placeholder="Password" [class.is-invalid]="submitted && registerForm.get('password')?.errors">
                     <label for="password">Password</label>
@@ -49,6 +49,10 @@
                     <span class="text-danger mt-2" *ngIf="submitted && (registerForm.get('password')?.hasError('minlength') || registerForm.get('password')?.hasError('maxlength'))">
                         Password must be at least 6 and maximum 20 characters
                     </span>
+                </div>
+
+                <div class="form-floatin" *ngIf="errorMessages.length > 0">
+                    <app-validation-messages [errorMessages]="errorMessages"></app-validation-messages>
                 </div>
                 <div class="d-grid mt-4 px-1">
                     <button class="btn btn-primary btn-lg-btn-info" type="submit">Create Account</button>
