--- a/Client/src/app/account/login/login.component.html
+++ b/Client/src/app/account/login/login.component.html
@@ -1,19 +1,34 @@
 <div class="d-flex justify-content-center">
     <div class="col-12 col-lg-5">
         <main class="form-signin">
-            <form>
+            <form [formGroup]="loginForm" (ngSubmit)="login()" autocomplete="off">
+
                 <div class="text-center mb-4">
                     <h3 class="mb-3 font-weight-normal">Login</h3>
                 </div>
+
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" placeholder="Email">
-                    <label for="userName">Email</label>
+                    <input formControlName="userName" type="text" class="form-control" 
+                    placeholder="Username" [class.is-invalid]="submitted && loginForm.get('userName')?.errors">
+                    <label for="userName">Username</label>
+                    <span class="text-danger mt-2" *ngIf="submitted && loginForm.get('userName')?.hasError('required')">
+                        User name is required
+                    </span>
                 </div>
 
                 <div class="form-floating mb-3">
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input formControlName="password" type="password" class="form-control"
+                    placeholder="Password" [class.is-invalid]="submitted && loginForm.get('password')?.errors">
                     <label for="password">Password</label>
+                    <span class="text-danger mt-2" *ngIf="submitted && loginForm.get('password')?.hasError('required')">
+                        Password is required
+                    </span>
+                </div> 
+
+                <div class="form-floatin" *ngIf="errorMessages.length > 0">
+                    <app-validation-messages [errorMessages]="errorMessages"></app-validation-messages>
                 </div>
+
                 <div class="d-grid mt-4 px-1">
                     <button class="btn btn-primary btn-lg-btn-info" type="submit">Log In</button>
                 </div>
