--- a/Client/src/app/navbar/navbar.component.html
+++ b/Client/src/app/navbar/navbar.component.html
@@ -16,8 +16,8 @@
                         </a>
                     </li>
                     <li class="nav-item" style="cursor: pointer;">
-                        <a class="nav-link" routerLink="/about" routerLinkActive="active">
-                            About
+                        <a class="nav-link" routerLink="/actions" routerLinkActive="active">
+                            Actions
                         </a>
                     </li>
                 </ul>
